syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "github.com/YungBenn/e-commerce-microservices/internal/auth/pb";

message Register {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
    google.protobuf.Timestamp date_of_birth = 6;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message Login {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}
